fix message invisible with register

--- a/frontend/src/modals/Auth/Auth.scss
+++ b/frontend/src/modals/Auth/Auth.scss
@@ -140,7 +140,7 @@
         visibility: visible;
       }
 
-      70% {
+      60% {
         opacity: 1;
         visibility: visible;
       }
